# faramesh-core

./: .cursorrules  .dockerignore  .gitattributes  .gitconfig.local  .gitignore  ALL_TASKS_COMPLETE.md  ARCHITECTURE.md  BONUS_TESTS_COMPLETE.md  BONUS_TESTS_GUIDE.md  BONUS_TESTS_RESULTS.md  BONUS_TESTS_VERIFICATION.md  BUG_FIXES.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEBUG_SUMMARY.md  DX_FEATURES.md  DX_FEATURES_V2.md  DX_UPGRADE_SUMMARY.md  DX_VERIFICATION.md  Dockerfile  Dockerfile.demo  FAQ.md  FEATURE_VERIFICATION.md  FINAL_COMPLETION_CHECK.md  FINAL_OSS_DX_STATUS.md  FINAL_TEST_RESULTS.md  FINAL_TEST_STATUS.md  FINAL_VERIFICATION.md  IMPLEMENTATION_VERIFICATION.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  OSS_DX_ENHANCEMENTS_COMPLETE.md  OSS_SDK_FEATURES_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  ROADMAP.md  SDK_COMPLETION_REPORT.md  (+25 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
Formula/: faramesh.rb
alembic/: env.py
deploy/: README.md
docs/: R4_IMPLEMENTATION_PLAN.md  R4_T_AUTHORIZATION_EFFECTS.md  README.md  aarm-assessment-todo.md
examples/: coding-agent.fpl  customer-support.fpl  infra-bot.fpl  mcp-server.fpl  payment-bot.fpl  sdk_batch_submit.py  sdk_policy_builder.py  sdk_submit_and_wait.py  starter.fpl
faramesh/: policy.yaml
npm/: README.md  package.json
packs/: README.md  bundled_fpl_compile_test.go  catalog.go  catalog_bundled_test.go  registry-catalog.example.json  validate_test.go
policies/: chain_exfil_hardening.shadow.yaml  chain_exfil_hardening.yaml  default.fpl  default.yaml  demo.fpl  (+13 more)
(+952 files in other folders)
